--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "firebase": "^9.23.0",
+    "firebase-tools": "^12.4.2",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
